samples/_failures_safe/1761418398_d3fa9c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_10ca6a19.c: In function ‘main’:
./samples/SAFE/__tmp_10ca6a19.c:161:12: error: missing terminating " character
  161 |     printf("\nTokens:\
      |            ^~~~~~~~~~~
./samples/SAFE/__tmp_10ca6a19.c:161:5: error: expected expression at end of input
  161 |     printf("\nTokens:\
      |     ^~~~~~
./samples/SAFE/__tmp_10ca6a19.c:161:5: error: expected declaration or statement at end of input
